--- a/src/app/test-control/test-control.component.html
+++ b/src/app/test-control/test-control.component.html
@@ -1,3 +1,2 @@
-<app-generic-table [displayedColumns]="columns" [dataSource]="dataSource" (rowClick)="onRowClick($event)"></app-generic-table>
-
-<app-scenario-stepper *ngIf="selectedTest" [scenario]="selectedTest" (scenarioUpdated)="updateScenario($event)"></app-scenario-stepper>
+<app-generic-table [displayedColumns]="columns" [dataSource]="dataSource" (rowClick)="onRowClick($event)">
+</app-generic-table>
