--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,7 +19,8 @@
           <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubSubMenu}" *ngIf="isExpanded || isShowing">expand_more</mat-icon>
         </mat-list-item>
         <div class="submenu" [ngClass]="{'expanded' : showSubSubMenu}" *ngIf="isShowing || isExpanded">
-          <mat-list-item>Kullanıcı Ekleme</mat-list-item>
+          <mat-list-item>Add User</mat-list-item>
+          
         </div>
       </div>
     </mat-nav-list>
