--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<button mat-raised-button color="primary" (click)="showAddUserForm = true">Add User</button>
-<app-user-add *ngIf="showAddUserForm" (closeForm)="showAddUserForm = false"></app-user-add>
-
 <app-menu></app-menu>
-
+<router-outlet></router-outlet>
