--- a/src/app/generic-table/generic-table.component.html
+++ b/src/app/generic-table/generic-table.component.html
@@ -9,14 +9,14 @@
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
     <td mat-cell *matCellDef="let element" (click)="onRowClick(element)"> {{element.data[column]}} </td>
   </ng-container>
 
   <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef> Düzenle </th>
+    <th mat-header-cell *matHeaderCellDef> Edit </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-raised-button color="warn" (click)="editRow(element)">Düzenle</button>
+      <button mat-raised-button color="warn" (click)="editRow(element)">Edit</button>
     </td>
   </ng-container>
 
