--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,20 +7,13 @@
     <mat-nav-list>
       <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
         <mat-icon mat-list-icon>home</mat-icon>
-
         <span class="full-width" *ngIf="isExpanded || isShowing">Ana Menü</span>
         <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubmenu}" *ngIf="isExpanded || isShowing">expand_more</mat-icon>
       </mat-list-item>
       <div class="submenu" [ngClass]="{'expanded' : showSubmenu}" *ngIf="isShowing || isExpanded">
-        <a mat-list-item href="...">Test</a>
-        <a mat-list-item href="...">Rapor</a>
-        <mat-list-item (click)="showSubSubMenu = !showSubSubMenu" class="parent">
-          <span class="full-width" *ngIf="isExpanded || isShowing">Nested Menu</span>
-          <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubSubMenu}" *ngIf="isExpanded || isShowing">expand_more</mat-icon>
-        </mat-list-item>
-        <div class="submenu" [ngClass]="{'expanded' : showSubSubMenu}" *ngIf="isShowing || isExpanded">
-          <mat-list-item>Kullanıcı Ekleme</mat-list-item>
-        </div>
+        <a mat-list-item [routerLink]="['/test']">Test</a>
+        <a mat-list-item [routerLink]="['/report']">Rapor</a>
+        <mat-list-item>Kullanıcı Ekleme</mat-list-item>
       </div>
     </mat-nav-list>
     <mat-nav-list>
@@ -28,10 +21,8 @@
   </mat-sidenav>
 
   <div class="example-sidenav-content">
-    <app-test-control></app-test-control>
+    <router-outlet></router-outlet>
   </div>
 
 </mat-sidenav-container>
-
-
 
