--- a/src/app/generic-table/generic-table.component.css
+++ b/src/app/generic-table/generic-table.component.css
@@ -6,6 +6,6 @@
 
 .mat-table {
   width: 100%;
-  height: calc(100% - 64px); /* toolbar yüksekliği kadar eksik */
+  height: calc(100% - 64px); 
   overflow: auto;
 }
