--- a/src/app/generic-table/generic-table.component.html
+++ b/src/app/generic-table/generic-table.component.html
@@ -9,10 +9,9 @@
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
     <td mat-cell *matCellDef="let element" (click)="onRowClick(element)"> {{element.data[column]}} </td>
     <!--<td mat-cell *matCellDef="let element" [ngClass]="{'passed-state': column === 'state' && element.data[column] === 'geçti', 'failed-state': column === 'state' && element.data[column] === 'kaldı'}"> {{element.data[column]}} </td>-->
-
   </ng-container>
 
   <ng-container matColumnDef="edit">
@@ -26,7 +25,9 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-
-<mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-
-
+<mat-paginator [length]="length"
+               [pageSize]="pageSize"
+               [pageSizeOptions]="pageSizeOptions"
+               (page)="handlePageEvent($event)"
+               showFirstLastButtons>
+</mat-paginator>
