--- a/src/app/generic-table/generic-table.component.html
+++ b/src/app/generic-table/generic-table.component.html
@@ -1,7 +1,7 @@
 <div>
   <mat-form-field appearance="fill" *ngFor="let column of displayedColumns">
-    <mat-label>{{column}}</mat-label>
-    <input matInput [(ngModel)]="newData[column]" placeholder="{{column}}">
+    <mat-label>{{ column }}</mat-label>
+    <input matInput [(ngModel)]="newData[column]" placeholder="{{ column }}">
   </mat-form-field>
   <button mat-raised-button color="primary" (click)="addData()">Add</button>
   <button mat-raised-button color="accent" (click)="exportToPDF()">Export to PDF</button>
@@ -9,24 +9,21 @@
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let element" (click)="onRowClick(element)"> {{element.data[column]}} </td>
-    <!--<td mat-cell *matCellDef="let element" [ngClass]="{'passed-state': column === 'state' && element.data[column] === 'geçti', 'failed-state': column === 'state' && element.data[column] === 'kaldı'}"> {{element.data[column]}} </td>-->
-
+    <th mat-header-cell *matHeaderCellDef> {{ column }} </th>
+    <td mat-cell *matCellDef="let element" (click)="onRowClick(element)" [ngClass]="getStateClass(element.data[column])">
+      {{ element.data[column] }}
+    </td>
   </ng-container>
-
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef> Edit </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-raised-button color="warn" (click)="editRow(element)">Edit</button>
+      <button mat-button color="primary" (click)="editRow(element)">Edit</button>
     </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns.concat('edit')"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns.concat('edit')"></tr>
+
 </table>
 
-
 <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-
-
