--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,12 @@
 <mat-toolbar color="primary" class="example-toolbar">
-  <button mat-icon-button (click)="isExpanded = !isExpanded"><mat-icon>menu</mat-icon></button>
+  <button mat-icon-button (click)="toggleSidenav()"><mat-icon>menu</mat-icon></button>
   <h1 class="example-app-name">Menu</h1>
 </mat-toolbar>
 <mat-sidenav-container class="example-container" autosize>
-  <mat-sidenav #sidenav class="example-sidenav" mode="side" opened="true" (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
+  <mat-sidenav #sidenav class="example-sidenav" mode="side" [opened]="isExpanded" (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
     <mat-nav-list>
       <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
         <mat-icon mat-list-icon>home</mat-icon>
-
         <span class="full-width" *ngIf="isExpanded || isShowing">Ana Menü</span>
         <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubmenu}" *ngIf="isExpanded || isShowing">expand_more</mat-icon>
       </mat-list-item>
@@ -15,7 +14,6 @@
         <a mat-list-item [routerLink]="['/test']">Test</a>
         <a mat-list-item [routerLink]="['/report']">Rapor</a>
         <a mat-list-item (click)="openUserAddDialog()">Add User</a>
-
       </div>
     </mat-nav-list>
   </mat-sidenav>
@@ -24,4 +22,3 @@
     <router-outlet></router-outlet>
   </div>
 </mat-sidenav-container>
-
