--- a/src/app/test-control/test-control.component.html
+++ b/src/app/test-control/test-control.component.html
@@ -1,2 +1,12 @@
 <app-generic-table [displayedColumns]="columns" [dataSource]="dataSource" (rowClick)="onRowClick($event)">
+  <ng-container matColumnDef="run">
+    <th mat-header-cell *matHeaderCellDef> Run </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button color="primary" (click)="runTest(element.data)">Run</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns"></tr>
+  
 </app-generic-table>
