--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-menu></app-menu>
-<router-outlet></router-outlet>
+<ng-container *ngIf="!isLoginPage() && isLoggedIn()">
+    <app-menu></app-menu>
+  </ng-container>
+  <router-outlet></router-outlet>
+  
