--- a/src/app/generic-table/generic-table.component.html
+++ b/src/app/generic-table/generic-table.component.html
@@ -1,20 +1,34 @@
 <div>
-  <mat-form-field appearance="fill" *ngFor="let column of displayedColumns">
-    <mat-label>{{ column }}</mat-label>
-    <input matInput [(ngModel)]="newData[column]" placeholder="{{ column }}">
+  <mat-form-field appearance="fill" *ngFor="let column of columns">
+    <mat-label>{{ column.header }}</mat-label>
+    <input matInput [(ngModel)]="newData[column.key]" placeholder="{{ column.header }}">
   </mat-form-field>
   <button mat-raised-button color="primary" (click)="addData()">Add</button>
   <button mat-raised-button color="accent" (click)="exportToPDF()">Export to PDF</button>
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-  <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+  <ng-container *ngFor="let column of columns" [matColumnDef]="column.key">
+    <th mat-header-cell *matHeaderCellDef> {{ column.header }} </th>
+    <td mat-cell *matCellDef="let element" (click)="onRowClick(element)" [ngClass]="getStateClass(element.data[column.key])">
+      <ng-container [ngSwitch]="column.type">
+        <ng-container *ngSwitchCase="'string'">
+          {{ element.data[column.key] }}
+        </ng-container>
+        <ng-container *ngSwitchCase="'enum'">
+          {{ element.data[column.key] }}
+        </ng-container>
+        <ng-container *ngSwitchDefault>
+          {{ element.data[column.key] }}
+        </ng-container>
+        <ng-container *ngSwitchCase="'custom'">
+          <button mat-button color="primary" (click)="runTest(element.data)">Run</button>
+        </ng-container>
 
-    <th mat-header-cell *matHeaderCellDef> {{ column }} </th>
-    <td mat-cell *matCellDef="let element" (click)="onRowClick(element)" [ngClass]="getStateClass(element.data[column])">
-      {{ element.data[column] }}
+        </ng-container>
     </td>
   </ng-container>
+
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef> Edit </th>
     <td mat-cell *matCellDef="let element">
@@ -22,9 +36,8 @@
     </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns.concat('edit')"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns.concat('edit')"></tr>
-
+  <tr mat-header-row *matHeaderRowDef="displayedColumnKeys"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumnKeys"></tr>
 </table>
 
 <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
