--- a/src/app/scenario-stepper/scenario-stepper.component.css
+++ b/src/app/scenario-stepper/scenario-stepper.component.css
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 95vw; /* Maksimum genişlik */
-  width: 95vw;
+  max-width: 100vw; /* Maksimum genişlik */
+  width: 100vw; /* Full width */
 }
 
 .stepper-card {
@@ -15,7 +15,7 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   font-family: 'Roboto', sans-serif; /* Yazı fontu */
-  max-width: 90vw; /* Maksimum genişlik */
+  width: 100%; /* Full width */
   max-height: 90vh; /* Maksimum yükseklik */
   display: flex;
   flex-direction: column;
@@ -34,6 +34,7 @@
 .stepper-form {
   display: flex;
   flex-direction: column;
+  width: 100%; /* Full width */
 }
 
 .full-width {
@@ -65,7 +66,8 @@
 .custom-table th, .custom-table td {
   padding: 10px;
   font-size: 1.2rem;
-  word-break: break-word; /* Uzun kelimelerin taşmasını engelle */
+  word-break: normal; /* Uzun kelimelerin taşmasını engelle */
+  white-space: nowrap; /* Satır kaymasını engelle */
 }
 
 .header-cell {
