--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -30,6 +30,14 @@
           <td mat-cell *matCellDef="let user"> {{user.last_name}} </td>
         </ng-container>
 
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Status </th>
+          <td mat-cell *matCellDef="let user"> 
+            {{ user.is_superuser ? 'Superuser' : (user.is_staff ? 'Staff' : 'Active') }}
+          </td>
+        </ng-container>
+
         <!-- Permissions Column -->
         <ng-container matColumnDef="permissions">
           <th mat-header-cell *matHeaderCellDef> Permissions </th>
@@ -54,6 +62,7 @@
           <th mat-header-cell *matHeaderCellDef> Actions </th>
           <td mat-cell *matCellDef="let user">
             <button mat-button color="accent" (click)="openPermissionsModal(user)">Grant Permission</button>
+            <button mat-button color="warn" *ngIf="canDeleteUser(user)" (click)="deleteUser(user)">Delete</button>
           </td>
         </ng-container>
 
