--- a/src/app/test-control/test-control.component.html
+++ b/src/app/test-control/test-control.component.html
@@ -1,8 +1,9 @@
+<app-generic-table [columns]="columns" [dataSource]="dataSource" [showAddDataForm]="true" [showExportButton]="true" [showRefreshButton]="true" (rowClick)="onRowClick($event)" (runTestClick)="runTest($event)">
+  <ng-template tableColumnTemplate="run" let-element let-i="index">
+    <button mat-button color="primary" (click)="runTest(element.data)">Run</button>
+  </ng-template>
+  <ng-template tableColumnTemplate="delete" let-element let-i="index">
+    <button mat-icon-button color="warn" (click)="deleteTest(element.data)"><mat-icon>delete</mat-icon></button>
+  </ng-template>
 
-<app-generic-table [columns]="columns" [dataSource]="dataSource" (rowClick)="onRowClick($event)">
-
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumnKeys"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnKeys"></tr>
 </app-generic-table>
-
